# RadeonProRender-Baikal

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  premake5.lua
Baikal/: Baikal.lua  CMakeLists.txt  imgui.ini  main.cpp
Baikal/Application/: app_utils.h  application.cpp  application.h  cl_render.cpp  cl_render.h  gl_render.cpp
Baikal/CL/: bxdf.cl  camera.cl  denoise.cl  integrator_ao.cl  integrator_bdpt.cl  integrator_pt.cl  light.cl  material.cl  normalmap.cl  path.cl  payload.cl  ray.cl  sampling.cl  scene.cl  sh.cl  texture.cl  utils.cl  volumetrics.cl
Baikal/CLW/: clw_scene_controller.cpp  clw_scene_controller.h  clwoutput.h  clwscene.h
Baikal/Controllers/: clw_scene_controller.cpp  clw_scene_controller.h  scene_controller.h  scene_controller.inl
Baikal/Core/: output.h  renderer.h
Baikal/Estimators/: estimator.h  path_tracing_estimator.cpp  path_tracing_estimator.h
Baikal/ML/: buffer.h  inference.h  inference_impl.cpp  inference_impl.h
Baikal/Output/: clwoutput.h  output.h
Baikal/PostEffects/: AreaMap33.h  bilateral_denoiser.h  clw_post_effect.h  post_effect.cpp  post_effect.h  wavelet_denoiser.h
Baikal/RenderFactory/: clw_render_factory.cpp  clw_render_factory.h  render_factory.h
Baikal/Renderers/: adaptive_renderer.cpp  adaptive_renderer.h  bdptrenderer.cpp  bdptrenderer.h  monte_carlo_renderer.cpp  monte_carlo_renderer.h  ptrenderer.cpp  ptrenderer.h  renderer.h
Baikal/SceneGraph/: camera.cpp  camera.h  clwscene.h  inputmap.h  inputmaps.h  iterator.h  light.cpp  light.h  material.cpp  material.h  scene1.cpp  scene1.h  scene_controller.inl  scene_object.cpp  scene_object.h  shape.cpp  shape.h  texture.cpp  texture.h  uberv2material.cpp  uberv2material.h
Baikal/Utils/: aux_ray.h  cl_inputmap_generator.cpp  cl_inputmap_generator.h  cl_mip_map_builder.cpp  cl_mip_map_builder.h  cl_mipmap.cpp  cl_mipmap.h  cl_mipmap_generator.cpp  cl_mipmap_generator.h  cl_program.cpp  cl_program.h  cl_program_manager.cpp  cl_program_manager.h  cl_uberv2_generator.cpp  cl_uberv2_generator.h  clw_class.cpp  clw_class.h  cmd_parser.cpp  cmd_parser.h  config_manager.cpp  config_manager.h  distribution1d.cpp  distribution1d.h  half.h  log.h  mkpath.cpp  tiny_obj_loader.h
BaikalDataGenerator/: CMakeLists.txt
BaikalDataGenerator/Source/: app_config.h  cline_parser.cpp  cline_parser.h  cmd_line_parser.cpp  cmd_line_parser.h  config_loader.cpp  config_loader.h  data_generator.cpp  data_generator.h  data_generator_impl.cpp  data_generator_impl.h  input_info.h  logging.cpp  logging.h  main.cpp  object_loader.cpp  object_loader.h  render.cpp  render.h  utils.h
BaikalIO/: CMakeLists.txt  file_utils.cpp  filesystem.h  image_io.cpp  image_io.h  material_io.cpp  scene_binary_io.cpp  scene_binary_io.h  scene_io.cpp  scene_io.h  scene_obj_io.cpp  scene_test_io.cpp  scene_test_io.cpp~RFdabaa1.TMP  singleton.h
BaikalStandalone/: BaikalStandalone.lua  CMakeLists.txt  main.cpp
BaikalStandalone/Application/: app_utils.cpp  app_utils.h  application.cpp  application.h  cl_render.cpp  cl_render.h  gl_render.cpp  gl_render.h  graph_scheme.cpp  graph_scheme.h  material_explorer.cpp  material_explorer.h  scene_load_utils.cpp  scene_load_utils.h  uber_graph.cpp  uber_graph.h  uber_node.cpp  uber_node.h  uber_tree.cpp  uber_tree.h
BaikalStandalone/ImGUI/: imgui_draw.cpp
BaikalStandalone/Utils/: config_manager.cpp  config_manager.h  output_accessor.h  shader_manager.h
BaikalTest/: BaikalTest.lua  CMakeLists.txt  aov.h  basic.h  camera.h  input_maps.h  internal.h  light.h  main.cpp  material.h  mipmap.h  test_scenes.h  uberv2.h
BaikalTest/ReferenceImages/: placeholder.txt
ProRenderGLTF/: BBox.cpp  Export.cpp  Import.cpp  ProRenderGLTF.def  ProRenderGLTF.lua  base64.h
ProRenderGLTF/Extensions/: AMD_RPR_camera.cpp  AMD_RPR_camera.h  AMD_RPR_lights.cpp  AMD_RPR_lights.h  AMD_RPR_material.h  AMD_RPR_post_effects.h  Extensions.h  KHR_materials_pbrSpecularGlossiness.h
ProRenderGLTF/Math/: float2.h  float3.h  half.h  int2.h  mathutils.h  matrix.h  quaternion.h
RadeonRaysPremakeAdapter/: CLW.lua  Calc.lua  RadeonRays.lua
Resources/Chief/: chief_lowest.mtl
Rpr/: CMakeLists.txt  Export.cpp  Export.h  RadeonProRender.cpp  RadeonProRender.def  RadeonProRender.h  RadeonProRender_CL.h  RadeonProRender_GL.h  Rpr.lua  Wrap.cpp
Rpr/Utils/: config_manager.cpp
Rpr/WrapObject/: CameraObject.cpp  CameraObject.h  ContextObject.cpp  ContextObject.h  FramebufferObject.cpp  FramebufferObject.h  LightObject.cpp  LightObject.h  MaterialObject.cpp  MaterialObject.h  SceneObject.cpp  SceneObject.h  ShapeObject.cpp  ShapeObject.h  WrapObject.h
Rpr/WrapObject/Materials/: ArithmeticMaterialObject.cpp  ArithmeticMaterialObject.h  ImageMaterialObject.cpp  MaterialObject.cpp  MaterialObject.h  MultiBxdfMaterialObject.cpp  MultiBxdfMaterialObject.h  SingleBxdfMaterialObject.cpp  SingleBxdfMaterialObject.h  TextureMaterialObject.cpp  UberMaterialObject.cpp  UberMaterialObject.h  UnsupportedMaterialObject.cpp  UnsupportedMaterialObject.h
RprLoadStore/: RprLoadStore.cpp  RprLoadStore.def  RprLoadStore.h  RprLoadStore.lua  Wrap.cpp  frs6.cpp  frs7.cpp  rps8.cpp  rps8.h
RprSupport/: CMakeLists.txt  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  RprSupport.cpp  RprSupport.def  RprSupport.h  RprSupport.lua  UberMaterial.cpp  UberMaterial.h
RprTest/: CMakeLists.txt  RprTest.lua  aov.h  arithmetic.h  basic.h  camera.h  light.h  main.cpp  material.h  rprx_uberv2.h  tiny_obj_loader.cpp  uberv2.h  utils.h
RprTest/OutputImages/: placeholder.txt
RprTest/ReferenceImages/: placeholder.txt
Scripts/: xgenConvert.py
Tools/Jenkins/: build_test.jenkinsfile  (+1 more)
Tools/MaterialConverter/: CMakeLists.txt  main.cpp  material_converter.cpp  material_converter.h
Tools/MaterialConverter/BaikalOld/SceneGraph/: camera.cpp  camera.h  light.cpp  light.h  material.h  scene1.cpp  scene1.h  shape.cpp  shape.h  texture.h
Tools/MaterialConverter/BaikalOld/SceneGraph/IO/: material_io.cpp  scene_io.cpp  scene_io.h
cmake/: FindFBX_SDK.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindOIIO.cmake
(+83 files in other folders)
